added OSX to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,15 @@
 # except for .gitignore
 !.gitignore
 
-# Ignore Play! working directory #
+
+##OSX start
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+# Thumbnails
+._*
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+##OSX end
