--- a/Seapal_play/conf/application.conf
+++ b/Seapal_play/conf/application.conf
@@ -25,7 +25,7 @@ application.langs="en"
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/seapal"
-db.default.user=root
+db.default.user=seapal
 db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
